fix null sentinel in increasing/decreasing gatherers